# ai-coding-agent-glassbox

./: .gitignore  README.md  STUDY_SESSION.md  pyproject.toml
advanced-examples/: README.md
advanced-examples/error-recovery/: README.md  error_recovery.py
advanced-examples/plan-and-execute/: README.md  plan_execute_agent.py
advanced-examples/reflexion/: reflexion.py
advanced-examples/sandbox/: sandbox.py
docs/: 00-overview.md  02-tool-use.md  03-llm-clients.md  A1-agent-patterns.md  A2-tool-use-implementations.md  A3-existing-agents.md
examples/: README.md
examples/code-rag/: README.md  code_rag.py
examples/error-recovery/: README.md
examples/memory/: README.md  memory.py
examples/multi-agent/: README.md  multi_agent.py
examples/plan-and-execute/: dag_executor.py  plan_execute_agent.py
examples/reflexion/: README.md
examples/sample_project/: hello.py
examples/sandbox/: README.md
minimal/: pyproject.toml
minimal/docs/: 01-agent-loop.md  04-tools.md  05-message-history.md  06-stop-reason.md  A3-existing-agents.md
minimal/src/: __init__.py  colors.py  main.py  tool_registry.py
minimal/src/llm_clients/: __init__.py  gemini_client.py
minimal/src/tools/: base.py  execute_command.py
src/: main.py  message_history.py
src/llm_clients/: llama_client.py
src/tools/: __init__.py  list_files.py  (+2 more)
standard/: .env.example  README.md  pyproject.toml
standard/docs/: 00-overview.md  04-tools-basic.md  05-tools-extended.md  06-message-history.md  07-stop-reason.md
standard/src/: __init__.py  agent.py  main.py
standard/src/llm_clients/: base.py  gemini_client.py
standard/src/tools/: __init__.py  ask_user.py  base.py  edit_file.py  glob_tool.py  grep.py  web_fetch.py
